fixed form padding on mobile

--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -5,6 +5,8 @@
   background-color: $light-bg-color;
 
   &__form {
+    padding: 2rem 0;
+
     @include desktop {
       display: flex;
       flex-direction: column;
